--- a/Session_3_v2/ui/layout/lHeader.html
+++ b/Session_3_v2/ui/layout/lHeader.html
@@ -1,8 +1,16 @@
 <header class="row">
-    <div class="cell-marg0 padd-15 color-info bg-yin border-bottom-5px">
-        <a href="." class="dis-block" title="Vers l'accueil">
-            <h2 class="txt-skinny marg-0 color-yang">Mini Framework</h2>
-            <span class="txt-sizeM">Php</span>
+    <div class="cell-12-marg0 padd-15 color-info bg-yin border-bottom-5px">
+        <a href="index.php" class="dis-block" title="Vers l'accueil">
+            <h2 class="marg-0 color-yang">Mini Journal</h2>
+            <span>Projet pour réalser un mini framework php</span>
         </a>
+    </div>
+    <div class="cell-12-marg0 padd-15 msg-info">
+        <ul class="list-unstyled list-inline">
+            <li><a href="index.php" title="Lien vers la liste des articles">Liste des articles</a></li>
+            <li><a href="index.php?a=new" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
+            <li><a href="index.php?a=update" title="Lien vers le formulaire pour modifier un article">Modifier un article</a></li>
+            <li><a href="index.php?a=delete" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
+        </ul>
     </div>
 </header>
