--- a/layout/lFooter.html
+++ b/layout/lFooter.html
@@ -1,5 +1,5 @@
 <footer class="row marg-50-top">
-    <div class="cell-marg0 padd-15 color-yang bg-yin align-center">
+    <div class="cell-marg0 padd-15 align-center">
         <span class="txt-over-breakline">Habit Jérémy - M1 DNR2i - 2017 </span>
     </div>
 </footer>
