--- a/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vAllArticles.html
+++ b/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vAllArticles.html
@@ -1,3 +1,4 @@
+<?= $this->showMsg(); ?>
 <div class="row">
     <div class="cell-12">
         <h1 class="txt-skinny">Liste des articles</h1>
@@ -6,11 +7,11 @@
 <div class="row-col-s">
     <?php if (empty($lst)){
         echo "<div class='cell-12'><p class='msg-warning'>Aucun article trouvé !</p></div>";
-    } else {
-        foreach ($lst as $article) {
-            echo "<a class='cell-4 padd-15 box-shad-24px align-center'
-               href='index.php?a=describe&id=".$article->getId()."'>".$article->
-                getTitle()."</a>";
-        }
-    } ?>
+} else {
+foreach ($lst as $article) {
+echo "<a class='cell-4 padd-15 box-shad-2px align-center'
+         href='index.php?a=describe&id=".$article->getId()."'>".$article->
+    getTitle()."</a>";
+}
+} ?>
 </div>
