--- a/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vFormNewUpdate.html
+++ b/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vFormNewUpdate.html
@@ -1,33 +1,34 @@
 <div class="row">
     <div class="cell-12">
-        <h1>Ajout d'un article</h1>
+        <h1><?= $h1; ?></h1>
     </div>
 </div>
-<form class="row required" action="index.php?a=new" method="post">
+<form class="row required" action="index.php?a=<?= $action; ?>" method="post">
     <div class="cell-12">
         <!-- author -->
         <div class="groupform-large">
             <label class="required" for="author">Auteur</label>
             <?= $this->showMsg("errorAuthor"); ?>
-            <input class="padd-15" type="text" name="author" id="author" required placeholder="un auteur" maxlength="255"
-                   value="<?= !empty($data['author']) ? $data['author'] : '' ?>"/>
+            <input class="padd-15" type="text" name="author" id="author" required placeholder="un auteur"
+                   maxlength="255"
+                   value="<?= $this->getArticle()->getAuthor(); ?>"/>
         </div>
         <!-- title -->
         <div class="groupform-large">
             <label class="required" for="title">Titre</label>
             <?= $this->showMsg("errorTitle"); ?>
             <input class="padd-15" type="text" name="title" id="title" required placeholder="un titre" maxlength="255"
-                   value="<?= !empty($data['title']) ? $data['title'] : '' ?>"/>
+                   value="<?= $this->getArticle()->getTitle(); ?>"/>
         </div>
-        <!--  status -->
+        <!--  publication_status -->
         <div class="groupform-large">
-            <label class="required" for="status">Statut de publication</label>
+            <label class="required" for="publication_status">Statut de publication</label>
             <?= $this->showMsg("errorStatus"); ?>
-            <select class="padd-15" name="status" id="status">
+            <select class="padd-15" name="publication_status" id="publication_status">
                 <option value="brouillon"
-                <?= $data['status'] == "brouillon" ? "selected" : ""; ?>>Brouillon</option>
+                <?= $this->getArticle()->getPublicationStatus() == "brouillon" ? "selected" : ""; ?>>Brouillon</option>
                 <option value="publie"
-                <?= $data['status'] == "publie" ? "selected" : ""; ?>>Publié</option>
+                <?= $this->getArticle()->getPublicationStatus() == "publie" ? "selected" : ""; ?>>Publié</option>
             </select>
         </div>
         <!-- chapo -->
@@ -35,14 +36,14 @@
             <label class="required" for="chapo">Chapo</label>
             <?= $this->showMsg("errorChapo"); ?>
             <textarea class="padd-15" id="chapo" name="chapo" rows="5" placeholder="un chapo ..."
-                      required><?= !empty($data['chapo']) ? $data['chapo'] : '' ?></textarea>
+                      required><?= $this->getArticle()->getChapo(); ?></textarea>
         </div>
         <!-- content -->
         <div class="groupform-large">
             <label class="required" for="content">Contenu</label>
             <?= $this->showMsg("errorContent"); ?>
             <textarea class="padd-15" id="content" name="content" rows="10" placeholder="un contenu ..."
-                      required><?= !empty($data['content']) ? $data['content'] : '' ?></textarea>
+                      required><?= $this->getArticle()->getContent(); ?></textarea>
         </div>
         <!-- submit -->
         <div class="marg-15-top align-center">
