--- a/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vFormSelect.html
+++ b/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vFormSelect.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="cell-12">
-        <h1>Suppression d'un article</h1>
+        <h1>Choisissez un article</h1>
     </div>
 </div>
-<form class="row required" action="index.php?a=delete" method="post">
+<form class="row required" action="index.php?a=<?= $action; ?>" method="post">
     <div class="cell-12">
         <!--  article -->
         <div class="groupform-large">
-            <label class="required" for="article">Article à supprimer</label>
+            <label class="required" for="article">Article </label>
             <?= $this->showMsg("errorArticle"); ?>
             <select class="padd-15" name="article" id="article">
                 <?php
