--- a/Session_3_v2/ui/layout/lHeader.html
+++ b/Session_3_v2/ui/layout/lHeader.html
@@ -9,7 +9,7 @@
         <ul class="list-unstyled list-inline">
             <li><a href="index.php" title="Lien vers la liste des articles">Liste des articles</a></li>
             <li><a href="index.php?a=new" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
-            <li><a href="index.php?a=update" title="Lien vers le formulaire pour modifier un article">Modifier un article</a></li>
+            <!--<li><a href="index.php?a=update" title="Lien vers le formulaire pour modifier un article">Modifier un article</a></li>-->
             <li><a href="index.php?a=delete" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
         </ul>
     </div>
