correction du bug nl2br et de lid manquant lors de update invalide

--- a/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vOneArticle.html
+++ b/Session_3_v2/app/MagicMonkey/MiniJournal/Article/views/vOneArticle.html
@@ -1,10 +1,15 @@
+<?= $this->showMsg(); ?>
 <article>
     <div class="row-col-reverse-s flex-vertical-center align-center-s">
         <div class="cell-8">
-            <h1 class="marg-0-bottom"><?= $article->getTitle(); ?></h1>
+            <h1 class="marg-0-bottom">
+                <a href="index.php?a=describe&id=<?= $article->getId(); ?>"
+                   title="<?= $article->getTitle(); ?>"><?= $article->getTitle(); ?></a>
+            </h1>
         </div>
         <div class="cell-4 align-right">
-            <a class="color-warning marg-15-right" href="index.php?a=update&id=<?= $article->getId() ; ?>" title="Modifier cet article">Modifier</a>
+            <a class="color-warning marg-15-right" href="index.php?a=update&id=<?= $article->getId(); ?>"
+               title="Modifier cet article">Modifier</a>
             <a class="color-error marg-15-right" href="index.php?a=delete&id=<?= $article->getId(); ?>"
                title="Supprimer cet article">Supprimer</a>
             <a href="index.php" title="Retour vers l'accueil">Retour</a>
